# fastapi_ecommerce

./: .dockerignore  .gitignore  Dockerfile  DockerfileOld  Makefile  README.md  alembic.ini  docker-compose.yaml  ecommerce.db  ecommerce.db-shm  ecommerce.db-wal  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/: main.py  models.py  models_old.py  schemas.py  utils.py
app/auth_utils/: __init__.py  auth.py
app/crud/: __init__.py  categories_crud.py  crud.py  products_crud.py  users_crud.py
app/database/: .env_example  __init__.py  db.py
app/dependencies/: __init__.py  auth.py  category_dependencies.py  dependencies.py
app/models/: __init__.py  categories.py  products.py  users.py
app/routers/: __init__.py  auth.py  categories.py  category.py  products.py
app/settings/: auth_eample.env
app/utils/: __init__.py  auth.py
migrations/: env.py
migrations/versions/: 16ceacfac8a0_add_relathionships_parent_and_children_.py  177b5c19cacb_default_values_for_is_admin_is_supplier_.py  1822e2e9d76e_initial_migration.py  372ed24445c5_new_initial_migration_in_docker.py  380c90c053de_fix_migrations_env_py.py  4eae1fd8f656_migration_to_postgres.py  789c0f0a2ca5_set_default_value_for_product_s_rating.py  7e87c600e413_change_type_of_price.py  abfacedb07df_.py  acbf54171f0f_rebuild_database.py  ba3c01bad0f8_create_user_model.py  c12314b61612_create_new_initial_migration.py  cc3983fbfd46_change_type_product_price_from_integer_.py  d02dd11900da_fix_user_model.py  d50f81975070_create_new_init_migration.py  d8e20407cfd4_init_migration.py  (+5 more)
