[project]
name = "fastapi-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.14.1",
    "alembic-postgresql-enum==1.8.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "mako==1.3.8",
    "markupsafe==3.0.2",
    "passlib==1.7.4",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "setuptools>=82.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.37",
    "starlette==0.41.3",
    "text-unidecode==1.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "wheel>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

# [build-system]
# requires = ["setuptools>=82.0.1", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["app"]
